--- a/Assignment/packages.config
+++ b/Assignment/packages.config
@@ -8,10 +8,19 @@
   <package id="Microsoft.AspNetCore.Razor" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Razor.Language" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Razor.Runtime" version="2.2.0" targetFramework="net461" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.Common" version="2.8.0" targetFramework="net461" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="2.8.0" targetFramework="net461" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="3.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Primitives" version="3.0.0" targetFramework="net461" />
   <package id="MongoDB.Bson" version="2.8.0" targetFramework="net461" />
   <package id="MongoDB.Driver" version="2.8.0" targetFramework="net461" />
   <package id="MongoDB.Driver.Core" version="2.8.0" targetFramework="net461" />
@@ -24,7 +33,7 @@
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="77.0.3865.4000" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
+  <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Collections" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net461" />
@@ -41,11 +50,14 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
+  <package id="System.Memory" version="4.5.3" targetFramework="net461" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net461" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net461" />
   <package id="System.Reflection.Metadata" version="1.4.2" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net461" />
@@ -60,12 +72,14 @@
   <package id="System.Text.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.CodePages" version="4.3.0" targetFramework="net461" />
   <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Text.Encodings.Web" version="4.5.0" targetFramework="net461" />
+  <package id="System.Text.Encodings.Web" version="4.6.0" targetFramework="net461" />
+  <package id="System.Text.Json" version="4.6.0" targetFramework="net461" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net461" />
   <package id="System.Threading.Tasks.Parallel" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Thread" version="4.3.0" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net461" />
