--- a/Assignment/GlobalSettings.json
+++ b/Assignment/GlobalSettings.json
@@ -1,5 +1,9 @@
 {
     "Browser": "Chrome",
-    "Timeout": "30"
-
+    "Timeout": "30",
+    "StartPage": "http://appdev.essette.com/template/v4.0/suite/",
+    "Username": "xpanxionatm",
+    "Password": "Welcome99",
+    "DisplayName": "Xpanxion ATM",
+    "GridPageLimit": "5"
 }
