--- a/Assignment/packages.config
+++ b/Assignment/packages.config
@@ -3,6 +3,7 @@
   <package id="DnsClient" version="1.2.0" targetFramework="net461" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net461" />
   <package id="ExtentReports" version="4.0.3" targetFramework="net461" />
+  <package id="Json.Net" version="1.0.16" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Html.Abstractions" version="2.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNetCore.Razor" version="2.2.0" targetFramework="net461" />
